--- a/Protifolio/Portifolio.css
+++ b/Protifolio/Portifolio.css
@@ -92,7 +92,7 @@ body{
 
 }
 /*addressing by descending selectors/nesting selectors and attr selectors*/
-.Sections .Section1  input[type="submit"]{
+.Sections .Section1  #LAT{
     color:orange;
     padding-left: 40px;
     padding-right: 40px;
@@ -105,6 +105,8 @@ body{
     top: 110px;
     left: 100px;
     border: 1px solid orange;
+    cursor: pointer;
+    text-decoration: none;
 }
 .Sections .Section1 img{
     width: 38vw;
@@ -114,7 +116,7 @@ body{
     border-radius: 5px;
     position: relative;
     left: 750px;
-    top: -310px;
+    top: -240px;
     opacity: 0.9;
 }
 
@@ -217,9 +219,6 @@ body{
     color: rgba(255, 255, 255, 0.8);
     line-height: 25px;
 }
-.Section3 .Image2{
-
-}
 .Section3 .Image2 img{
     width: 280px;
     height:360px;
@@ -292,7 +291,20 @@ body{
     top: -70px;
     left: 700px;
 }
-
+/*why can't give address by :nth-child to make active button?*/
+.Section4 div .FB4S{
+    background-color: rgba(0, 0, 0, 0.25);
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 15px;
+    padding-right:15px;
+    /* padding: 15px; */
+    border-radius: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.01);
+    outline: 1.5px solid rgba(255, 255, 255, 0.4);
+    outline-offset: 3px;
+    
+}
 .Section4 h5{
     color: rgba(62, 19, 19, 1);
     width: 80%;
@@ -407,6 +419,11 @@ body{
     position: relative;
     top: 5px;
     
+}
+/*Why the focus section doesn't work?*/
+.Section5 .lastMainDiv form .Name:foucs{
+    color: green;
+    padding: 15px;
 }
 .Section5 .lastMainDiv form input[type="email"]{
     background-color: white;
