--- a/Protifolio/Portifolio.css
+++ b/Protifolio/Portifolio.css
@@ -1,12 +1,11 @@
 *{
     box-sizing: border-box;
-
 }
 body{
     background-color: rgba(0, 0, 0, 1);
 }
 .Sections{
-    background-color: lightgray;
+    background-color: rgba(128, 128, 128, 0.881);
     width: 90%;
     /* height: 1000px; */
     border: 1px solid black;
@@ -17,12 +16,13 @@ body{
 .Sections .Section1{
     width: 100%;
     height: 680px;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.75);
+    overflow: hidden;
 
 }
 .Sections .Section1 #leftSpan{
     color: rgb(212, 207, 207);
-    background-color: rgba(0, 0, 0, 0.1);
+    /* background-color: rgba(0, 0, 0, 0.1); */
     font-family: sans-serif; /*Needs work on Fontfamily*/
     padding-left: 15px;
     padding-right: 15px;
@@ -34,7 +34,12 @@ body{
     top: 55px;
     left: 200px;
     /* border: 1px solid white; */
+    transition: .2s ease-in-out;
     
+}
+.Sections .Section1 #leftSpan:hover{
+    color: white;
+    font-size: 32px;
 }
 .Sections .Section1 nav{
     /* background-color: gray; */
@@ -49,7 +54,13 @@ body{
     color:rgb(212, 207, 207);
     padding-left: 50px;
     padding-right: 50px;
+    transition: .2s ease-in-out;
    
+}
+.Sections .Section1 nav #rightSpan:nth-child(6):hover{
+    color: white;
+    font-size: 18px;
+    
 }
 .Sections .Section1 nav a{
     color: rgb(212, 207, 207);
@@ -58,6 +69,65 @@ body{
     padding: 15px;
     font-size: 50;
     font-weight: thin;
+    transition: .2s ease-in-out;
+}
+.Sections .Section1 nav a:hover{
+    color: white;
+    font-size: 18px;
+}
+.Sections .Section1 .verticalNavigation {
+    width: 80px;
+    height:675px;
+    background-color: rgba(0, 0, 0, 1);
+    position: absolute;
+    top: 77px;
+    /* overflow: hidden; */
+
+    
+}
+.Sections .Section1 .verticalNavigation h3{
+    width: 100%;
+    /* height: 80px; */
+    background-color: orange;
+    margin-top: -4px;
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    color:rgba(255, 255, 255, 0.75);
+    transition: .2s ease-in-out;
+}
+.Sections .Section1 .verticalNavigation h3:hover{
+    color:rgba(255, 255, 255, 1);
+    font-size: 20px;
+}
+.Sections .Section1 .verticalNavigation a{
+    color:rgba(255, 255, 255, 0.75);
+    text-decoration: none;
+    /* background-color: whitesmoke; */
+    font-weight: 600;
+    padding: 5px;
+    display: block;
+    text-align: center;
+    padding-top: 15px;
+    margin-bottom: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 10px;
+    transition: .2s ease-in-out;
+    
+}
+.Sections .Section1 .verticalNavigation a:hover{
+    color: rgba(255, 255, 255, 1);
+    font-size: 18px;
+}
+.Sections .Section1 .verticalNavigation input[type*="email"]{
+    /* background-color: gray; */
+    writing-mode: vertical-lr; /*How to flip the writing mode ?*/
+    width: 60px;
+    height: 200px;
+    transform: translatey(150px);
+    background-color: transparent;
+    
 }
 .Sections .Section1 > div h4, h1{
     display: grid;
@@ -65,20 +135,21 @@ body{
     text-align: left;
     position: relative;
     top: 100px;
-    margin-left: 100px;
+    margin-left: 150px;
 }
 .Sections .Section1 > div h4{
     font-size: 20px;
     letter-spacing: 4px;
     color: rgb(182, 125, 19);
     font-weight: thin;
+    margin-left: 150px;
 }    
-.Sections .Section1 > div h1{
+.Sections .Section1  div h1{
     color: rgba(250, 250, 250, 0.8);
     font-size: 50px; 
     margin-top: -2px;  
 }
-.Sections .Section1 > div p{
+.Sections .Section1  div p{
     width: 45%;
     /* border: 1px solid white; */
     color:rgba(250, 250, 250, 0.7);
@@ -87,7 +158,7 @@ body{
     font-weight: 100;
     position:relative;
     top: 80px;
-    left: 100px;
+    left: 150px;
     font-size: 19px;
 
 }
@@ -103,10 +174,16 @@ body{
     font-size: 16px;
     position: relative;
     top: 110px;
-    left: 100px;
+    left: 150px;
     border: 1px solid orange;
     cursor: pointer;
     text-decoration: none;
+    transition: .2s ease-in-out;
+}
+.Sections .Section1  #LAT:hover{
+    color:white;
+    border-color:white;
+    font-size: 16.5px;
 }
 .Sections .Section1 img{
     width: 38vw;
@@ -148,7 +225,7 @@ body{
     height: 330px;
     
 }
-.Section2 > div h1, p{
+.Section2  div h1, p{
     position: relative;
     top: -700px;
     left: 800px;
@@ -156,14 +233,18 @@ body{
     direction: ltr;
     /* border: 1px solid black; */
 }
-.Section2 > div h1{
+.Section2 div h1{
     position: relative;
     width: 400px;
     left: 650px;
     color: rgba(255, 255, 255, 0.9);
     font-size: 35px;
     font-weight: bold;
+    transition: .2s ease-in-out;
 
+}
+.Section2 div h1:hover{
+    font-size: 36px;
 }
 .Section2 > div p{
     position: relative;
@@ -203,7 +284,11 @@ body{
     position: relative;
     top: -50px;
     left: 500px;
+    transition: .2s ease-in-out;
 
+}
+.Section3 h1:hover{
+    font-size: 33px;
 }
 .Section3 div h2{
     color: orange;
@@ -251,6 +336,11 @@ body{
     background-color: gray;
     border-radius: 20%;
     text-decoration: none;
+    transition: .2s ease-in-out;
+}
+.Section3 .Image2 a:hover{
+    background-color: rgba(255, 255, 255, 0.7);
+    color: black;
 }
 .Section3 .Image2 h4{
     position: relative;
@@ -276,6 +366,11 @@ body{
     top: -10px;
     left: 30px;
     font-size: 35px;
+    transition: .2s ease-in-out;
+}
+.Section4 h1:hover{
+    font-size: 36px;
+    transform: translatey(-7px);
 }
 .Section4 div{
     /* background-color: gray; */
@@ -290,6 +385,11 @@ body{
     position: relative;
     top: -70px;
     left: 700px;
+    transition: .2s ease-in-out;
+}
+.Section4 div a:hover{
+    color: white;
+    font-size: 16px;
 }
 /*why can't give address by :nth-child to make active button?*/
 .Section4 div .FB4S{
@@ -304,6 +404,10 @@ body{
     outline: 1.5px solid rgba(255, 255, 255, 0.4);
     outline-offset: 3px;
     
+}
+.Section4 div .FB4S:hover{
+    background-color:rgba(0, 0, 0, 0.5) ;
+    outline-color:rgba(255, 255, 255, 0.6) ;
 }
 .Section4 h5{
     color: rgba(62, 19, 19, 1);
@@ -331,11 +435,33 @@ body{
     width: 238px;
     height: 300px;
     margin-left: 10%;
+    transition: .2s ease-in-out;
 }
+/*design the image separates and pops in a bit bigger size*/
+ .Section4 div [src*="IMG"]:hover{
+    width: 242px;
+    height: 305px;
+    margin-left: 9.9%;
+ }
+ .Section4 p{
+    color: white;
+    font-size: 100px;
+    font-weight: 100;
+    position: relative;
+    left: -70px;
+    top: -900px;
+    letter-spacing: 5px;
+    writing-mode: vertical-lr;
+    text-align: left;
+    color: rgba(128, 128, 128, 0.288);
+    width: 100px;
+    height: 500px;
+   
+ }
 .Section4 #loadMore4thSec{
     color: white;
     text-decoration: none;
-    background-color: rgb(188, 128, 138);
+    background-color: rgba(255, 166, 0, 0.68);
     padding-top: 12px;
     padding-bottom:12px ;
     padding-left:30px ;
@@ -344,7 +470,12 @@ body{
     position: relative;
     left: 45%;
     font-weight: thin;
+    transition: .2s ease-in-out;
 
+}
+.Section4 #loadMore4thSec:hover{
+    font-size: 16.5px;
+    background-color: orange;
 }
 .Section5{
     background-color: rgba(0, 0, 0, 0.6);
@@ -379,13 +510,17 @@ body{
     padding: 10px;
     font-size: 15px;
     border: none;
-    width: 160px;
+    width: 170px;
     background-color:transparent;
     color: white;
     text-align: left;
     outline: none;
     /* border: 1px solid black; */
+    transition: .2s ease-in-out;
     
+}
+.Section5 .lastMainDiv input[type*="tel"]:hover{
+   font-size: 15.5px;
 }
 .Section5 .lastMainDiv div input[type*="email"]{
     background-color: transparent;
@@ -394,8 +529,11 @@ body{
     color: white;
     width: 200px;
     outline: none;
+    transition: .2s ease-in-out;
 }
-
+.Section5 .lastMainDiv div input[type*="email"]:hover{
+      font-size: 15.5px;
+}
 .Section5 .lastMainDiv input[type*="email"]{
     position: relative;
     left: -100px;
@@ -406,6 +544,13 @@ body{
     /* border: 1px solid black; */
     border: none;
     outline: none;
+    transition: .2s ease-in-out;
+}
+.Section5 .lastMainDiv input[type*="email"]:foucs{
+    padding: 12px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 16px;
 }
 .Section5 .lastMainDiv form input[type="text"], input[type="email"]{
     margin-left: 10px;
@@ -421,10 +566,13 @@ body{
     
 }
 /*Why the focus section doesn't work?*/
-.Section5 .lastMainDiv form .Name:foucs{
-    color: green;
-    padding: 15px;
+.Section5 .lastMainDiv form input[type="text"]:focus{
+    padding: 12px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 16px;
 }
+/*Why the email section has problem, can't add foucs like text or purposal inputtype*/
 .Section5 .lastMainDiv form input[type="email"]{
     background-color: white;
     position: relative;
@@ -442,6 +590,12 @@ body{
     border: none;
 
 }
+.Section5 .lastMainDiv form #purposalReq:foucs{
+     padding: 12px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 16px;
+}
 /*aligning the placeholder value on top right of message box*/
 .Section5 .lastMainDiv form #Message{
     width: 615px;
@@ -450,15 +604,24 @@ body{
     text-align: left;
     position: relative;
     top: 38px;
-    
 }
-
+.Section5 .lastMainDiv form #Message:foucs{
+    padding: 12px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 16px;
+}
 .Section5 .lastMainDiv form p {
     color: rgba(255, 255, 255, 0.8);
     position: relative;
     top: 40px;
     left: 370px;
     font-size: 18px;
+    transition: .2s ease-in-out;
+}
+.Section5 .lastMainDiv form p:hover{
+    color: white;
+    font-size: 19px;
 }
 /*flaw on changing the size and color of checkbox*/
 .Section5 .lastMainDiv form p input[type*="checkbox"] {
@@ -472,7 +635,7 @@ body{
 }
 .Section5 .lastMainDiv form input[type*="submit"] {
     color: white;
-    background-color: rgb(180, 99, 99);
+    background-color: rgba(255, 166, 0, 0.629);
     padding-top: 12px;
     padding-bottom:12px;
     padding-left:30px;
@@ -483,6 +646,10 @@ body{
     position: relative;
     top: -10px;
     left: 532px;
+    transition: .2s ease-in-out;
+}
+.Section5 .lastMainDiv form input[type*="submit"]:hover{
+    background-color: orange;
 }
 /*How to add google map to the url section?*/
 .Section5 .lastMainDiv form #url {
