--- a/Protifolio/Portifolio.css
+++ b/Protifolio/Portifolio.css
@@ -3,6 +3,8 @@
 }
 body{
     background-color: rgba(0, 0, 0, 1);
+    margin: 0;
+    padding: 0;
 }
 .Sections{
     background-color: rgba(128, 128, 128, 0.881);
@@ -40,14 +42,22 @@ body{
 .Sections .Section1 #leftSpan:hover{
     color: white;
     font-size: 32px;
-}
+}/*adding sticky to the top navigation bar*/
 .Sections .Section1 nav{
     /* background-color: gray; */
-    width: 80%;
-    padding: 15px;
+    width: 95%;
+    /* height: 50px; */
+    padding: 30px;
     text-align: right;
     margin-left: 20%;
     margin-top: 10px;
+    position: fixed;
+    left: -290px;
+    top: 0px;
+    background-color: rgba(0, 0, 0, 0.75);
+    /* border: 1px solid white; */
+    z-index: 99;
+    margin-top: 0;
     
 }
 .Sections .Section1 nav #rightSpan:nth-child(6){
@@ -70,6 +80,9 @@ body{
     font-size: 50;
     font-weight: thin;
     transition: .2s ease-in-out;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    
 }
 .Sections .Section1 nav a:hover{
     color: white;
@@ -89,7 +102,7 @@ body{
     width: 100%;
     /* height: 80px; */
     background-color: orange;
-    margin-top: -4px;
+    margin-top: 0px;
     text-align: center;
     padding-top: 30px;
     padding-bottom: 30px;
