--- a/PortfolioUsingFlexbox/ProtfolioUsingFlexbox.css
+++ b/PortfolioUsingFlexbox/ProtfolioUsingFlexbox.css
@@ -32,7 +32,7 @@ body{
 }
 /* left top text */
 #portTop{
-    color: rgb(0, 0, 0);
+    color: white;
     position: absolute;
     left: 15rem;
     top: 6rem;
@@ -50,38 +50,45 @@ body{
 /* top section image*/
 
 #textSection{
-    margin-left: 5rem;
-    padding-top: 5rem;
-    border: 1px solid rgb(255, 255, 255);
+   
+    /* border: 1px solid rgb(255, 255, 255); */
     /* background-color: silver; */
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     flex-direction: column;
     width: 50%;
-    margin-left: 5rem;
+    margin-left: 12rem;
+    padding-top: 15rem;
 }
 
 #textSection h2{
     color: orange;
     font-size: 30px;
     display: flex;
-    justify-content: center;
+    justify-content: start;
+    
 }
 
 #textSection h1{
     color: #fff;
-    font-size: 40px;
+    font-size: 50px;
     letter-spacing: 3px;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     margin-top: -0.8rem;
 
 }
+/* why the paragrapgh doen't by defining justify-content:center;?*/
 #textSection p{
     color: #fff;
     display: flex;
     justify-content: center;
-    width: 30;
+    align-items: center;
+    width: 50%;
+    /* border: 1px solid white; */
+    font-size: 18px;
+    text-align: left;
+    margin-left: 2rem;
 
 }
 #textSection input{
@@ -90,6 +97,61 @@ body{
     width: 10rem;
     border-radius:20px;
     display: flex;
-    justify-content: center;
+    justify-content:center;
     margin-left: 10rem;
+    margin-top: 0.8rem;
+}
+
+/* gallery section */
+
+.photo{
+    display: flex;
+    justify-content: end;
+    margin-top: -25rem;
+
+}
+
+.photo img{
+    width: 600px;
+    height: 500px;
+    border-radius: 5px;
+}
+
+.secondSection{
+    background-color: rgba(0, 0, 0, 0.7);
+    display: grid;
+    grid-template-columns: repeat(2,50%);
+}
+
+.secondSection .leftCol{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:flex-end;
+    margin-top: 3rem;
+}
+
+.secondSection .leftCol img{
+    width: 400px;
+    height: 400px;
+    border-radius: 10px;
+}
+.secondSection .leftCol .imageTop{
+      width: 300px;
+      height: 300px;
+       border-radius: 10px;
+       border: 1px solid gray;
+       box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+       position: relative;
+       top: -250px;
+       left: -150px;
+}
+
+.secondSection .rightCol{
+    margin-left: 4rem;
+    width: 80%;
+    margin-top: 5rem;
+}
+.secondSection .rightCol h1, p{
+    color: white;
 }
